postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: voting
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:15-alpine
        ports:
        - containerPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: voting
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
    name:  "db-service"
