redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: voting
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: voting
spec:
  selector:
    app: myapp
  ports:
  - port: 6379
    targetPort: 6379
    name: "redis-service"
