result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: voting
spec:  # <- Indentation fixed here
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: dockersamples/examplevotingapp_result
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: voting
spec:
  selector:
    app: result
  ports:
  - port: 8081
    targetPort: 80
  # type: LoadBalancer
