vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: voting
spec:
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote
        image: dockersamples/examplevotingapp_vote
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: voting
spec:
  selector:
    app: myapp
  ports:
  - port: 8080
    targetPort: 80
