nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting
  namespace: voting
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Specify the Ingress class
  rules:
  - host: voting.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vote-service
            port:
              number: 8080
  - host: result.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: result
            port:
              number: 8081
